4th cctv addition

--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -73,6 +73,10 @@
                     <h3 id="cctv3-name">CCTV 3</h3>
                     <video id="cctv3" controls muted></video>
                 </div>
+                <div class="cctv-box">
+                    <h3 id="cctv4-name">CCTV 4</h3>
+                    <video id="cctv4" controls muted></video>
+                </div>
             </div>
         </div>
         
