--- a/front_end/index.html
+++ b/front_end/index.html
@@ -383,7 +383,7 @@
       </main>
     </div>
 
-        <script src="script.jsp"></script>
+        <script src="script.js"></script>
     <script
       async
       defer
