--- a/front_end/test_back_end/test_index.html
+++ b/front_end/test_back_end/test_index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>교통 데이터 API 연동 프로토타입</title>
+    <title>교통 데이터 API call test</title>
     <link rel="stylesheet" href="test_style.css">
 </head>
 <body>
